<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/author_account_bg"
    tools:ignore="ContentDescription"
    >
  <ImageView
      android:id="@+id/iv_close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:src="@drawable/action_close_white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/find_psw"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/LoginText"
      />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:src="@drawable/ic_account_login_header"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/login_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/login_info"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      style="@style/LoginText"
      />

  <Button
      android:id="@+id/btn_login_register"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="52dp"
      android:layout_marginLeft="52dp"
      android:layout_marginRight="52dp"
      android:layout_marginStart="52dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/bg_round_corner_selector"
      android:text="@string/login"
      android:textColor="@color/text_secondary"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/login_info"
      />
  <EditText
      android:id="@+id/et_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:background="@null"
      android:drawableLeft="@drawable/ic_account_login_password"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/ic_account_login_password"
      android:hint="@string/login_edit_password_hint"
      android:inputType="textPassword"
      android:maxLength="16"
      android:maxLines="1"
      app:layout_constraintBottom_toTopOf="@+id/divider"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      style="@style/HintText"
      />
  <View
      android:id="@+id/divider"
      android:layout_width="0dp"
      android:layout_height="0.5dp"
      android:layout_marginBottom="24dp"
      android:background="@color/hint_color"
      app:layout_constraintBottom_toTopOf="@+id/btn_login_register"
      app:layout_constraintEnd_toEndOf="@+id/btn_login_register"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      />
  <View
      android:id="@+id/divider_captcha"
      android:layout_width="0dp"
      android:layout_height="0.5dp"
      android:layout_marginBottom="16dp"
      android:background="@color/hint_color"
      app:layout_constraintBottom_toTopOf="@+id/et_password"
      app:layout_constraintEnd_toEndOf="@+id/btn_login_register"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      />
  <EditText
      android:id="@+id/et_captcha"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:background="@null"
      android:drawableLeft="@drawable/ic_account_verify_code"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/ic_account_verify_code"
      android:hint="@string/register_edit_captcha_hint"
      android:inputType="number"
      android:maxLength="6"
      android:maxLines="1"
      app:layout_constraintBottom_toTopOf="@+id/divider_captcha"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      tools:visibility="visible"
      style="@style/HintText"
      />

  <TextView
      android:id="@+id/tv_captcha"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/get_captcha"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="@+id/et_captcha"
      app:layout_constraintEnd_toEndOf="@+id/btn_login_register"
      />


  <View
      android:id="@+id/divider1"
      android:layout_width="0dp"
      android:layout_height="0.5dp"
      android:layout_marginBottom="16dp"
      android:background="@color/hint_color"
      app:layout_constraintBottom_toTopOf="@+id/et_captcha"
      app:layout_constraintEnd_toEndOf="@+id/btn_login_register"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      />

  <EditText
      android:id="@+id/et_phone_number"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:background="@null"
      android:drawableLeft="@drawable/ic_account_login_user_name"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/ic_account_login_user_name"
      android:hint="@string/login_edit_phone_hint"
      android:inputType="phone"
      android:maxLength="11"
      android:maxLines="1"
      app:layout_constraintBottom_toTopOf="@+id/divider1"
      app:layout_constraintStart_toStartOf="@+id/btn_login_register"
      style="@style/HintText"
      />
  <TextView
      android:id="@+id/user_login_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:layout_marginTop="32dp"
      android:text="@string/login_register"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintTop_toBottomOf="@+id/btn_login_register"
      style="@style/LoginText"
      />
  <TextView
      android:id="@+id/tv_author_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="24dp"
      android:layout_marginStart="24dp"
      android:text="@string/author_login"
      app:layout_constraintBottom_toBottomOf="@+id/user_login_register"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      style="@style/LoginText"
      />
  <android.support.constraint.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"
      />
  <ImageView
      android:id="@+id/iv_share_weibo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="28dp"
      android:layout_marginRight="28dp"
      android:src="@drawable/ic_action_share_weibo"
      app:layout_constraintBottom_toBottomOf="@+id/iv_share_wechat"
      app:layout_constraintEnd_toStartOf="@+id/iv_share_wechat"
      />
  <ImageView
      android:id="@+id/iv_share_wechat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:src="@drawable/ic_action_share_wechat"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/user_login_register"
      />
  <ImageView
      android:id="@+id/iv_share_qq"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="28dp"
      android:layout_marginStart="28dp"
      android:src="@drawable/ic_action_share_qq"
      app:layout_constraintBottom_toBottomOf="@+id/iv_share_wechat"
      app:layout_constraintStart_toEndOf="@+id/iv_share_wechat"
      />

  <android.support.constraint.Group
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />
  <TextView
      android:id="@+id/tv_bottom_agreement"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:textColor="@color/hint_color"
      android:textSize="13sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:text="@string/user_agreement"
      />
  <View
      android:id="@+id/view5"
      android:layout_width="0dp"
      android:layout_height="0.5dp"
      android:layout_marginBottom="16dp"
      android:background="@color/hint_color"
      app:layout_constraintBottom_toTopOf="@+id/tv_bottom_agreement"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
  <android.support.constraint.Group
      android:id="@+id/captcha_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="et_captcha,tv_captcha,divider_captcha"
      />
  <android.support.constraint.Group
      android:id="@+id/third_party_login_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:constraint_referenced_ids="iv_share_weibo,iv_share_wechat,iv_share_qq"
      />
  <TextView
      android:id="@+id/tv_login_bottom_detail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/login_bottom_detail"
      android:textColor="@color/white"
      android:textSize="13sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@+id/view5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
</android.support.constraint.ConstraintLayout>